Fixing confirmation widths on small screens using existing media query breakpoint.

--- a/css/front.css
+++ b/css/front.css
@@ -664,5 +664,6 @@ opacity: 0.5;
   }
   .appointments-confirmation-wrapper span {
     float: none;
+    width: auto;
   }
 }
